# safecat

./: .Cargo.toml.swp  .gitignore  Cargo.toml  README.md  cert.toml  last_generated.txt  priv.key  pub.key
.github/workflows/: noir.yml
data/: Prover.toml  prover-one-cert-path-2.toml  trust_kernel.json
data/NoirGeneralProofs/: Prover.toml  Prover.toml.old
data/NoirGeneralProofs/data/certs/: einstein-assert-satoshi
data/NoirGeneralProofs/src/: data_processing.nr  main.nr
data/NoirSkeletonProject/: Prover.toml  Prover.toml.old  Verifier.toml
data/NoirTargetedProofs/: README.md
data/NoirTargetedProofs/data/certs/: euclid-assert-satoshi
data/NoirTargetedProofs/data/keys/: einstein.key
data/certificate-formats/: babyjubjub-woolball.toml  babyjubjub.toml  evmaddres.toml
data/formats/babyjubjub/: format.toml
data/formats/babyjubjub-woolball/: format.toml
data/formats/babyjubjub-woolball/proofs/personhood-for-address/: proof.toml
data/formats/babyjubjub/proofs/personhood/: proof.toml  proof.toml.old
data/formats/babyjubjub/proofs/targeted-personhood/: proof.toml
data/formats/babyjubjub/proofs/targeted_personhood/: main.nr  proof.toml
data/formats/evmaddress/: format.toml
data/societies/: woolball.json
data/test_data/: data.md  einstein.key  satoshi.key
data/trust_set/: euclid.key  newton.key
noir-code/: Nargo.toml  README.md
noir-code/src/: data_processing.nr  lib.nr
noir-examples/poseidon-hash-long-strings/: Nargo.toml  README.md
noir-examples/poseidon-hash-long-strings/src/: lib.nr
noir-examples/verify_certifiates/: Nargo.toml  Prover.toml  README.md  Verifier.toml
noir-examples/verify_certifiates/data/certs/: einstein-assert-satoshi  euclic-assert-satoshi
noir-examples/verify_certifiates/proofs/: verify_certificates.proof
noir-examples/verify_certifiates/src/: main.nr
noir-examples/verify_certificates/: Prover.toml  README.md  Verifier.toml
noir-examples/verify_certificates/data/certs/: einstein-assert-satoshi  euclid-assert-satoshi
noir-examples/verify_certificates/data/keys/: newton.key
noir-examples/verify_certificates/proofs/: verify_certificates.proof
noir-examples/verify_certificates/src/: main.nr
noir-examples/verify_human_certificates_for_address/: Prover.toml  README.md  Verifier.toml
noir-examples/verify_human_certificates_for_address/data/certs/: einstein-assert-satoshi  euclid-assert-satoshi
noir-examples/verify_human_certificates_for_address/data/keys/: davinci.key  euclid.key
noir-examples/verify_human_certificates_for_address/proofs/: verify_certificates.proof
noir-examples/verify_human_certificates_for_address/src/: main.nr
noir-examples/verify_human_certificates_for_public_key/: Prover.toml
noir-examples/verify_human_certificates_for_public_key/data/keys/: satoshi.key
noir-examples/verify_human_certificates_for_public_key/proofs/: verify_certificates.proof
noir-examples/verify_human_certificates_for_public_key/src/: main.nr
output/: Prover.toml  prover.toml
output/src/: main.nr
src/: actions.rs  babyjubjub.rs  bn254_scalar_cast.rs  cast.rs  certificate.rs  certificate_formats.rs  cli.rs  consts.rs  io_utils.rs  main.rs  merkle_pederson.rs  safecat.txt  serialization.rs
src/ansi_cat/: ansi_cat.ansi  help_sentences.txt  mod.rs
src/commands/: attest.rs  generate.rs  mod.rs  name.rs  prove.rs  show_keys.rs  show_name.rs  sign.rs
src/crypto_structures/: babyjubjub.rs  certificate.rs  document.rs  merkle_pederson.rs  mod.rs  proof_input.rs  signature.rs  society.rs  woolball.rs
src/tests/: unit_tests.rs
(+5 files in other folders)
