[package]
name = "safecat"
version = "0.1.0"
edition = "2021"


[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "=0.4.0"
ark-std = "0.4.0"
babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark" }
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
clap = { version = "4.5.1", features = ["derive", "string"] }
ff_ce = { version = "0.11", features = ["derive"] }
hex = "0.4.3"
num = "0.4.1"
num-bigint = "0.4.4"
poseidon-rs = "0.0.10"
rand = "0.8.5"
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.118"
sha2 = "0.10.8"
chrono = {version = "0.4.38", features = ["serde"]}
inquire = { version = "0.7.5", features = ["date"] }
ark-serialize = { version = "0.4.2", features = ["derive"] }


