[package]
name = "safecat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "safecat"
path = "src/main.rs"

[dependencies]
ark-bn254 = "0.4.0"
ark-ff = "=0.4.0"
ark-std = "0.4.0"
babyjubjub-ark = { git = "https://github.com/arnaucube/babyjubjub-ark" }
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark" }
clap = { version = "4.5.1", features = ["derive", "string"] }
ff_ce = { version = "0.11", features = ["derive"] }
hex = "0.4.3"
num = "0.4.1"
num-bigint = "0.4.4"
poseidon-rs = "0.0.10"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.118"
sha2 = "0.10.8"
chrono = {version = "0.4.38", features = ["serde"]}
inquire = { version = "0.7.5", features = ["date"] }
ark-serialize = { version = "0.4.2", features = ["derive"] }
regex = "1.10.5"
toml = "0.8.14"
zip = "2.2.0"

[package.metadata.deb]
name = "Safecat"
maintainer = "Neiman <neiman@hackerspace.pl>"
copyright = "2024, Neiman <neiman@hackerspace.pl>"
extended-description =  """\
A simple CLI tool to for cryptographic actions using Baby \
Jubjub Elliptic Curve and Poseidon hash function."""
license-file = "LICENSE"
assets = [
    ["target/release/safecat", "usr/bin/", "755"], 
    ["data/*", "var/lib/safecat/", "755"],        # For files directly in the data folder
    ["data/*/*", "var/lib/safecat/", "755"],      # For files in first-level subdirectories
    ["data/*/*/*", "var/lib/safecat/", "755"],    # For files in second-level subdirectories
    ["data/*/*/*/*/*", "var/lib/safecat/", "755"],# For files in fourth-level subdirectories
    ["data/*/*/*/*/*/*", "var/lib/safecat/", "755"]# For files in fifth-level subdirectories
]
